// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgJUU gpPGHL"
    role="button"
  >
    <button
      class="sc-gsTEea sc-dlfnuX bbwPaB iQiKnX sc-gKseQn jwbdaH"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-fubCzh lmVMlk"
      />
      <div
        class="sc-iBPTik dRFRd"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqyKOL dHviqL"
  >
    <div
      class="sc-dQoVA dyqRuA"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pGacB inAhgM"
      >
        <hr
          class="sc-crrszt dJbrHD"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crrszt dJbrHD"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgJUU gpPGHL"
    role="button"
  >
    <button
      class="sc-gsTEea sc-dlfnuX bbwPaB cpprog sc-gKseQn jwbdaH"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-fubCzh lmVMlk"
      />
      <div
        class="sc-iBPTik dRFRd"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqyKOL hOTOKr"
  >
    <div
      class="sc-kstqJO erhWdo sc-hBEYId bVjGOF fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-dQoVA dyqRuA"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pGacB inAhgM"
      >
        <hr
          class="sc-crrszt dJbrHD"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crrszt dJbrHD"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgJUU gpPGHL"
    role="button"
  >
    <button
      class="sc-gsTEea sc-dlfnuX bbwPaB bNqxFo sc-eCstlR jUFDJc"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gsTEea sc-dlfnuX bbwPaB bNqxFo sc-jSgvzq fTMHls"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iBPTik dRFRd"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqyKOL dHviqL"
  >
    <div
      class="sc-dQoVA dyqRuA"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pGacB inAhgM"
      >
        <hr
          class="sc-crrszt dJbrHD"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crrszt dJbrHD"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgJUU gpPGHL"
    role="button"
  >
    <button
      class="sc-gsTEea sc-dlfnuX bbwPaB etHzKr sc-eCstlR jUFDJc"
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gsTEea sc-dlfnuX bbwPaB etHzKr sc-jSgvzq fTMHls"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iBPTik dRFRd"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqyKOL hOTOKr"
  >
    <div
      class="sc-kstqJO erhWdo sc-hBEYId bVjGOF fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-dQoVA dyqRuA"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pGacB inAhgM"
      >
        <hr
          class="sc-crrszt dJbrHD"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crrszt dJbrHD"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqHYmW jDUhCV"
        >
          <p
            class="sc-bdfBQB gWazlY sc-kEjbQP"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
